--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,70 +1,70 @@
-name: Deploy Hugo PaperMod Demo to Pages
+name: Deploy Github Pages
 
 on:
   push:
     paths-ignore:
       - "images/**"
-      - "LICENSE"
-      - "README.md"
+      - "license"
+      - "readme.md"
     branches:
       - master
-      - exampleSite
+      - examplesite
   workflow_dispatch:
     # manual run
     inputs:
-      hugoVersion:
-        description: "Hugo Version"
+      hugoversion:
+        description: "hugo version"
         required: false
         default: "0.112.4"
 
-# Allow one concurrent deployment
+# allow one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
 
-# Default to bash
+# default to bash
 defaults:
   run:
     shell: bash
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# sets permissions of the github_token to allow deployment to github pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
 jobs:
-  # Build job
+  # build job
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: ${{ github.event.inputs.hugoVersion || '0.112.4' }}
+      hugo_version: ${{ github.event.inputs.hugoversion || '0.112.4' }}
     steps:
-      - name: Install Hugo CLI
+      - name: install hugo cli
         run: |
-          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_linux-amd64.deb \
+          wget -o ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${hugo_version}/hugo_${hugo_version}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-      - name: Checkout
+      - name: checkout
         uses: actions/checkout@v3
         with:
-          ref: exampleSite
-      - name: Setup Pages
+          ref: examplesite
+      - name: setup pages
         id: pages
         uses: actions/configure-pages@v3
-      - name: Get Theme
+      - name: get theme
         run: git submodule update --init --recursive
-      - name: Update theme to Latest commit
+      - name: update theme to latest commit
         run: git submodule update --remote --merge
-      - name: Build with Hugo
+      - name: build with hugo
         run: |
           hugo \
-            --buildDrafts --gc \
-            --baseURL ${{ steps.pages.outputs.base_url }}
-      - name: Upload artifact
+            --builddrafts --gc \
+            --baseurl ${{ steps.pages.outputs.base_url }}
+      - name: upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./public
-  # Deployment job
+  # deployment job
   deploy:
     environment:
       name: github-pages
@@ -72,6 +72,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
+      - name: deploy to github pages
         id: deployment
         uses: actions/deploy-pages@v2
