--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,8 +7,7 @@ on:
       - "license"
       - "readme.md"
     branches:
-      - master
-      - examplesite
+      - main
   workflow_dispatch:
     # manual run
     inputs:
@@ -45,12 +44,16 @@ jobs:
           wget -o ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${hugo_version}/hugo_${hugo_version}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
       - name: checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: examplesite
+          # Fetch all history for .GitInfo and .Lastmod
+          fetch-depth: 0
+          # Make sure to fetch submodules (your theme)
+          submodules: 'recursive'
       - name: setup pages
         id: pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
       - name: get theme
         run: git submodule update --init --recursive
       - name: update theme to latest commit
@@ -61,7 +64,7 @@ jobs:
             --builddrafts --gc \
             --baseurl ${{ steps.pages.outputs.base_url }}
       - name: upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
   # deployment job
@@ -74,4 +77,4 @@ jobs:
     steps:
       - name: deploy to github pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
