--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,80 +1,70 @@
 name: Deploy Github Pages
 
 on:
+  # Runs on pushes targeting the main branch
   push:
-    paths-ignore:
-      - "images/**"
-      - "license"
-      - "readme.md"
     branches:
       - main
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-    # manual run
-    inputs:
-      hugoversion:
-        description: "hugo version"
-        required: false
-        default: "0.112.4"
 
-# allow one concurrent deployment
+# Allow only one concurrent deployment, cancelling older runs
 concurrency:
   group: "pages"
   cancel-in-progress: true
 
-# default to bash
-defaults:
-  run:
-    shell: bash
-
-# sets permissions of the github_token to allow deployment to github pages
+# Set permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
 jobs:
-  # build job
+  # Build job
   build:
     runs-on: ubuntu-latest
-    env:
-      hugo_version: ${{ github.event.inputs.hugoversion || '0.112.4' }}
     steps:
-      - name: install hugo cli
-        run: |
-          wget -o ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${hugo_version}/hugo_${hugo_version}_linux-amd64.deb \
-          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: examplesite
           # Fetch all history for .GitInfo and .Lastmod
           fetch-depth: 0
           # Make sure to fetch submodules (your theme)
           submodules: 'recursive'
-      - name: setup pages
+
+      - name: Setup Hugo
+        # This action is the standard, reliable way to install Hugo in a workflow
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: 'latest' # Or pin to a specific version like '0.121.0'
+          extended: true
+
+      - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
-      - name: get theme
-        run: git submodule update --init --recursive
-      - name: update theme to latest commit
-        run: git submodule update --remote --merge
-      - name: build with hugo
+
+      - name: Build with Hugo
+        # Build the site, minifying the output for production
         run: |
-          hugo \
-            --builddrafts --gc \
-            --baseurl ${{ steps.pages.outputs.base_url }}
-      - name: upload artifact
+          hugo --gc --minify \
+            --baseURL "${{ steps.pages.outputs.base_url }}"
+
+      - name: Upload Artifact
+        # Automatically uploads the built site as a Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
+          # Default output folder for Hugo
           path: ./public
-  # deployment job
+
+  # Deployment job
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    # This job depends on the build job finishing successfully
     needs: build
     steps:
-      - name: deploy to github pages
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
